2008-09-19  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Added release-notes 2.24 branch.

2008-09-19  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: glib and gtk+ branched (glib-2-18 and gtk-2-14).

2008-09-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: glade3 HEAD is no more string frozen.

2008-09-17  Claude Paroz  <claude@2xlibre.net>

	* update-stats.py: Make notify_list() handle utf-8 in diff argument.

2008-09-17  Gil Forcada  <gforcada@gnome.org>

	* releases.xml.in: glade3 will use gnome-2-22 branch for GNOME 2.24

2008-09-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: hamster-applet should be string frozen.

2008-09-11 Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: bug-buddy branched for 2.24.

2008-09-10  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Add sr@latin (replacement for sr@Latn).

2008-09-07  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* people.xml.in: Add hackergotchi for Vincent van
	Adrighem.

2008-09-06  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Conduit branched for GNOME 2.24.

2008-09-05  Jonh Wendell  <jwendell@gnome.org>

	* gnome-modules.xml.in: Added maintainer info for vino and vinagre.
	* people.xml.in: Added myself.

2008-09-05  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gvfs branched for 2.24.

2008-09-04 Gil Forcada <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-power-manager branched for GNOME 2.24.

2008-09-04 Gil Forcada <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: Sound-juicer branched for GNOME 2.24.

2008-09-03  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Fixed bugzilla link for gst-* family.

2008-09-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Enforced string freeze for GNOME 2.24.

2008-08-30 Gil Forcada <gforcada@gnome.org>
