@@ -346,7 +346,8 @@
   <module id="empathy">
     <webpage>http://live.gnome.org/Empathy</webpage>
     <maintainer id="xclaesse"/>
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
+    <branch id="gnome-2-24" stringfrozen="true"/>
   </module>
 
   <module id="eog">
