@@ -708,7 +708,7 @@
       <module id="deskbar-applet"/>
       <module id="eel"/>
       <module id="ekiga"/>
-      <module id="empathy"/>
+      <module id="empathy" branch="gnome-2-24"/>
       <module id="eog"/>
       <module id="epiphany" branch="gnome-2-24"/>
       <module id="evince"/>
