@@ -1,3 +1,8 @@
+2008-09-20  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: empathy branched for GNOME 2.24.
+
 2008-09-19  Gil Forcada  <gforcada@gnome.org>
 
 	* gnome-modules.xml.in: Added release-notes 2.24 branch.
